# nanika

./: .gitignore  .goreleaser.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.claude/: launch.json
.claude/skills/: decomposer  orchestrator
.claude/skills/article/: SKILL.md  intaglio-bible.md  voice.md
.claude/skills/channels/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  obsidian.yml  release.yml
archive/memory/: go.mod  plugin.json
archive/memory/skills/: SKILL.md
docs/: DUST-WIRE-SPEC-GAPS.md  DUST-WIRE-SPEC.md  EVENT-BUS.md  EXPERIMENTS.md  PERSONA-STANDARD.md  PLUGIN-PROTOCOL.md  SKILL-STANDARD.md  dust-protocol-plan.md  observability.md
docs/archive/: wails-retirement-audit-2026-04-13.md
personas/: academic-researcher.md  academic-reviewer.md  academic-writer.md  architect.md  data-analyst.md  default.md  devops-engineer.md  methodologist.md  qa-engineer.md  security-auditor.md  senior-backend-engineer.md  senior-frontend-engineer.md  staff-code-reviewer.md  technical-writer.md
plugins/dashboard/: Makefile  app.go  chat.go  com.nanika.dashboard.plist  events.go  go.mod  go.sum  launch.json  live.go  main.go  plugin.json  start.sh  tracker_test.go  wails.json
plugins/dashboard/channel/: index.ts  package.json  sse-test.ts
plugins/dashboard/frontend/: index.html  package-lock.json  package.json  package.json.md5  plugin-vite.config.ts  tsconfig.app.json  vite-plugin-nanika-shared.ts  vite.config.ts
plugins/dashboard/internal/: clickthrough_darwin.go  clickthrough_darwin.m  clickthrough_stub.go  tray_darwin.go  window.go  (+2 more)
plugins/discord/: Makefile  go.mod  plugin.json
plugins/dust/: .gitignore  Cargo.toml  PROTOCOL.md  README.md  index.html  package-lock.json  package.json  plugin.json  tailwind.config.ts  vite.config.ts
plugins/dust/dust-conformance/: Cargo.toml  build.rs
plugins/dust/dust-conformance/fixtures/minimal/: Cargo.toml  plugin.json
plugins/dust/dust-conformance/fixtures/minimal/src/: main.rs
plugins/dust/dust-conformance/src/: lib.rs  main.rs
plugins/dust/dust-conformance/tests/: envelope.rs  framing.rs  heartbeat.rs  lifecycle.rs  replay.rs  shutdown.rs
plugins/dust/dust-conformance/tests/common/: mod.rs
plugins/dust/dust-core/: Cargo.toml
plugins/dust/dust-core/src/: envelope.rs  error.rs  events.rs  framing.rs  lib.rs  state.rs
plugins/dust/dust-dashboard/: Cargo.toml  DESIGN-TRACKER-TUI.md  REVIEW-TRACKER-TUI.md
plugins/dust/dust-dashboard/src/: app.rs  component_renderer.rs  main.rs  slash_grammar.rs  ui.rs
plugins/dust/dust-registry/: Cargo.toml
plugins/dust/dust-registry/src/: ipc.rs  lib.rs  observability.rs
plugins/dust/dust-sdk/: Cargo.toml
plugins/dust/dust-sdk/examples/hello/: Cargo.toml  plugin.json
plugins/dust/dust-sdk/examples/hello/src/: main.rs
plugins/dust/dust-sdk/src/: lib.rs
plugins/dust/examples/stubs/bash/: README.md  plugin.json  plugin.sh
plugins/dust/examples/stubs/go/: .gitignore  README.md  go.mod  main.go  plugin.json
plugins/dust/examples/stubs/python/: README.md  plugin.json  plugin.py
plugins/dust/plugins/dummy-plugin/: Cargo.toml
plugins/dust/plugins/dummy-plugin/src/: main.rs
plugins/dust/plugins/dust-health/: Cargo.toml
plugins/dust/plugins/dust-health/src/: main.rs
plugins/dust/plugins/dust-scheduler/: Cargo.toml
plugins/dust/plugins/dust-scheduler/src/: main.rs
plugins/dust/plugins/dust-tracker/: Cargo.toml
plugins/dust/plugins/dust-tracker/src/: main.rs
plugins/dust/plugins/hello-plugin/: Cargo.toml
plugins/dust/plugins/hello-plugin/src/: main.rs
plugins/dust/plugins/system-plugin/: Cargo.toml
plugins/dust/plugins/system-plugin/src/: main.rs
plugins/dust/scripts/: dust-dash.sh  dust-shell.sh  run-conformance.sh  shell-bench.sh
plugins/dust/src/: App.tsx  ComponentRenderer.test.tsx  ComponentRenderer.tsx  QuickEditor.tsx  globals.css  main.tsx  slashGrammar.test.ts  slashGrammar.ts  types.ts
plugins/dust/src-tauri/: Cargo.toml  tauri.conf.json
plugins/dust/src-tauri/capabilities/: default.json
plugins/dust/src-tauri/src/: lib.rs  main.rs
plugins/elevenlabs/: go.mod  plugin.json
plugins/engage/: go.mod  plugin.json
plugins/gmail/: go.mod  plugin.json
plugins/linkedin/: go.mod  plugin.json
plugins/memory/: plugin.json
plugins/nen/: Makefile  SKILL.md  go.mod  go.sum  install.sh  plugin.json
plugins/nen_mcp/: README.md  go.mod  plugin.json
plugins/obsidian/: Makefile  cicd_test.go  go.mod  go.sum  plugin.json
plugins/reddit/: Makefile  go.mod  plugin.json
plugins/scheduler/: Makefile  go.mod  go.sum  plugin.json
plugins/scout/: .gitignore  debug_test.go  go.mod  go.sum  plugin.json
plugins/sobre/: .gitignore  Makefile  go.mod  plugin.json
plugins/substack/: Makefile  go.mod  plugin.json
plugins/telegram/: Makefile  go.mod  plugin.json
plugins/tracker/: .gitignore  Cargo.toml  Makefile  plugin.json
plugins/tracker/examples/: live-tracker.py  mutate-tracker.py
plugins/tracker/migrations/: 001_initial.sql  002_parent_id.sql  003_seq_id.sql
plugins/tracker/skills/: SKILL.md
plugins/tracker/src/: commands.rs  db.rs  dust_serve.rs  id.rs  import_linear.rs  lib.rs  main.rs  models.rs  query.rs
plugins/tracker/tests/: plugin_id.rs
plugins/tracker/ui/: index.tsx  package-lock.json  package.json
plugins/ynab/: go.mod  plugin.json
plugins/youtube/: go.mod  plugin.json
scripts/: README.md  audit-bins.sh  backfill-zettels.sh  chaos-obsidian.sh  check-voice-drift.sh  check-voice-existence.sh  experiment-snapshot.sh  flow-generate.sh  flow-gif.sh  flow-lib.sh  flow-test-fixtures.sh  flow-video.sh  generate-agents-md.sh  install.sh  learnings-rescore.sql  nanika-update.sh  new-mission.sh  strip-em-dashes.sh  test-first-check.sh  window-1-soak-48h-report.sh
scripts/launchd/: com.nanika.nen-daemon.plist  com.nanika.orchestrator-daemon.plist  com.nanika.scheduler-daemon.plist
skills/: article
skills/decomposer/: README.md  go.mod
skills/orchestrator/: .gitignore  AGENTS.md  Makefile  README.md  go.mod  go.sum  main.go
templates/: mission.md
(+955 files in other folders)
