[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[lib]
name = "tracker"
path = "src/lib.rs"

[[bin]]
name = "tracker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
sha2 = "0.10"
hex = "0.4"
dust-sdk = { path = "../../plugins/dust/dust-sdk" }
dust-core = { path = "../../plugins/dust/dust-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
