[package]
name = "dust-conformance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dust-conform"
path = "src/main.rs"

[dependencies]
dust-core = { path = "../dust-core" }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "fs", "process", "time"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
