[package]
name = "dust-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dust-tracker"
path = "src/main.rs"

[dependencies]
dust-sdk = { path = "../../dust-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
